fix horizontal scroll bug

--- a/portfolio/src/app/content/contact/contact.component.css
+++ b/portfolio/src/app/content/contact/contact.component.css
@@ -29,10 +29,10 @@ section article p {
   border-radius: 8px;
   margin: 4px 0 0 0;
   display: block;
+  max-width: 80vw;
 }
 
 .form-group input.form-control {
-  width: 25rem;
   height: 32px;
 }
 
